bugs removed from collapse and expand lead show

--- a/app/assets/stylesheets/api/leads/leads_show.scss
+++ b/app/assets/stylesheets/api/leads/leads_show.scss
@@ -1,6 +1,4 @@
 .lead-show-container{
-    background: green;
-    color: #fff;
     transition: height .3s ease-in-out;
     height: 0px;
 }
